--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.devtools.livereload.enabled=true
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
+#gg authentication - login with gg
+spring.security.oauth2.client.registration.google.client-id=633529221837-p15btranqsdcd0r3ir5t83dop5514otg.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
