NguyenThiNa_CRUD_Class_Year_Period_21/11/2023

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.security.oauth2.client.registration.google.client-id=633529221837-p15btranqsdcd0r3ir5t83dop5514otg.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 
+#Logging
+logging.level.org.springframework.security=DEBUG
