--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # DevTools Properties
@@ -22,4 +23,4 @@ spring.security.oauth2.client.registration.google.client-id=633529221837-p15btra
 spring.security.oauth2.client.registration.google.client-secret=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
 
 #Logging
-logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
